<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EquationSolvingApp</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Solver of quadratic equations</string>
	<string name="label_coeff_a">Coefficient a</string>
	
	<string name="label_coeff_b">Coefficient b</string>
	
	<string name="label_coeff_c">Coefficient c</string>
	
	<string name="label_calculate">Calculate</string>
	
	<string name="label_diakrinousa">Discriminant: </string>
	
	<string name="label_status">Solution type: %1$s</string>
	
	<string name="label_root1">Root 1:</string>
	
	<string name="label_root2">Root 2:</string>
	
	<string name="status_two_roots">Two distinct roots</string>
	<string name="status_double_root">Double root</string>
	<string name="status_no_root">No real root</string>
	
</resources>
